# group_class_members

./: .gitignore  LICENSE  README.md  pyproject.toml
src/group_class_members/: __init__.py  main.py
tests/: test_group_class_members.py
