[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "group_class_members"
version = "0.1.0"
description = "A Python package to sort and group class members."
authors = [
    { name = "Hans Dembinski" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://hdembinski.github.io/"

[tool.hatch.build.targets.wheel]
packages = ["src/group_class_members"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "A", "C4", "T20", "Q", "RUF"]
ignore = ["E741", "D203", "D212"]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["D", "RUF012"]
"main.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
